# BachelorThesis

./: CMakeLists.txt  README.md
config/: config.ini
doc/final/: technical_project.tex
doc/final/uml/: ShipClassDiagram.mdj  SkyboxClassDiagram.mdj  WaterGridClassDiagram.mdj
include/application/: atw_gui.h  camera.h  custom_camera.h  glfw_io.h  glfw_renderer.h  glfw_timer.h
include/application/builders/: atw_bar_builder.h  atw_button_builder.h  atw_var_builder.h
include/camera/: custom_camera.h  fps_camera.h
include/entities/: geometry_factory.h  ship_model.h  skybox.h  skybox_cube.h  terrain_heightmap.h  water_grid.h
include/entities/bounding/: bounding_box.h  bounding_grid.h  computational_cell.h  computational_cells_arrays.h  computational_grid.h
include/entities/builders/: skybox_builder.h  water_builder.h
include/geometry/: cube.h  cuboid.h  geometry_object.h  grid.h  quad.h  vertex.h
include/rendering/: bindable_object.h  glsl_shader.h  renderable_object.h
include/rendering/buffers/: buffer.h  frame_buffer.h  vertex_array.h
include/rendering/textures/: assimp_texture.h  cubemap_texture.h  texture2D.h  texture_2D.h
include/util/: error_handling.h  rand_functions.h  rays_functions.h  waves_deformer.h
include/utils/: error_handling.h  initialize.h  mesh.h  model.h  obj_model.h  physx_simulation.h  rand_functions.h  rays_functions.h  settings_reader.h  settings_struct.h  waves_deformer.h
include/utils/model_loading/: mesh.h  model.h
res/: config.ini
res/models/black_pearl_export2/: black_pearl.mtl
res/models/boat_fishing/: boat_fishing_only_hull.mtl
res/shaders/: basic.frag  bounding_box.frag  bounding_box.vert  f15.frag  f15.vert  mesh.frag  mesh.vert  skybox.frag  skybox.vert  water.frag  water.vert  waves_deformer.frag  waves_deformer.vert
res/shaders/120/: basic.vert  skybox.frag  skybox.vert  water.frag  water.vert  waves_deformer.frag  waves_deformer.vert
res/shaders/330/: skybox.vert  water.frag  water.vert  waves_deformer.frag
res/textures/hip_miramar/: hip_miramar.shader  miramar_up.tga
res/textures/skybox/alt2/: back.tga  down.tga  front.tga  left.tga  right.tga  up.tga
src/: main.cpp
src/application/: atw_gui.cpp  camera.cpp  custom_camera.cpp  glfw_io.cpp  glfw_renderer.cpp  glfw_timer.cpp
src/application/builders/: atw_bar_builder.cpp  atw_button_builder.cpp  atw_var_builder.cpp
src/camera/: custom_camera.cpp  fps_camera.cpp
src/entities/: ship_model.cpp  skybox.cpp  skybox_cube.cpp  terrain_heightmap.cpp  water_grid.cpp
src/entities/bounding/: bounding_box.cpp  bounding_grid.cpp  computational_cell.cpp  computational_grid.cpp
src/entities/builders/: skybox_builder.cpp  water_builder.cpp
src/geometry/: cube.cpp  cuboid.cpp  grid.cpp  quad.cpp
src/rendering/: glsl_shader.cpp  renderable_object.cpp
src/rendering/buffers/: buffer.cpp  frame_buffer.cpp  vertex_array.cpp
src/rendering/textures/: cubemap_texture.cpp  texture2D.cpp  texture_2D.cpp
src/util/: error_handling.cpp  rand_functions.cpp  rays_functions.cpp  waves_deformer.cpp
src/utils/: error_handling.cpp  initialize.cpp  obj_model.cpp  physx_simulation.cpp  rand_functions.cpp  rays_functions.cpp  settings_reader.cpp  waves_deformer.cpp
src/utils/model_loading/: mesh.cpp  model.cpp
tests/: run_tests.bat  test_config.ini  utilities_unittest.cpp  utils_unittest.cpp  wrappers.h
win_installer/: Readme.txt  license.txt  win_installer.iss
